--- a/app/src/main/res/layout/show_item_layout.xml
+++ b/app/src/main/res/layout/show_item_layout.xml
@@ -1,38 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_row="1"
+    android:layout_column="4"
+    android:layout_columnSpan="1"
+    android:layout_columnWeight="1"
+    android:orientation="horizontal"
     android:visibility="visible">
 
-    <TextView
-        android:id="@+id/dataIdView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Id"
-        android:textAlignment="center" />
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
-    <TextView
-        android:id="@+id/dataNameView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Name"
-        android:textAlignment="center" />
+        <TextView
+            android:id="@+id/dataIdView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_column="0"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:text="@string/id"
+            android:textAlignment="center" />
 
-    <TextView
-        android:id="@+id/dataPriceView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Price"
-        android:textAlignment="center" />
+        <TextView
+            android:id="@+id/dataNameView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_column="1"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:text="@string/name"
+            android:textAlignment="center" />
 
-    <TextView
-        android:id="@+id/dataCountryView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Country"
-        android:textAlignment="center" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/dataPriceView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_column="2"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:text="@string/price"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/dataCountryView"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_column="3"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:text="@string/country"
+            android:textAlignment="center" />
+
+    </TableRow>
+
+</TableLayout>
